# waybar-custom-modules

./: Cargo.toml  LICENSE  README.md
cpu/: Cargo.toml
cpu/src/: main.rs
cpufreq/: Cargo.toml
cpufreq/src/: cpu.rs  main.rs
mem/: Cargo.toml
mem/src/: main.rs
swaync/: Cargo.toml
swaync-client/: Cargo.toml  build.rs  swaync.rs
swaync-client/examples/: toggle.rs
swaync-client/src/: lib.rs
swaync/src/: main.rs
waybar/: Cargo.toml
waybar/src/: lib.rs  percentage.rs  value.rs
webcam/: Cargo.toml
webcam/src/: main.rs
webcam/src/tasks/: debounce.rs  mod.rs  signal.rs  udev.rs
webcam/src/udev/: checker.rs  mod.rs  monitor.rs
