[package]
name = "cpu"
version = "0.1.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
humantime = "2.1.0"
structopt = "0.3.22"
thiserror = "1.0.26"
waybar = { path = "../waybar" }
