[package]
name = "swaync"
version = "0.1.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atoi = "0.4"
humantime = "2.0"
num-format = { version = "0.4", features = ["with-system-locale"] }
structopt = "0.3"
thiserror = "1.0"
waybar = { path = "../waybar" }
