[package]
name = "webcam"
version = "0.1.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
humantime = "2.0"
miniserde = "0.1"
nix = "0.21"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "time"] }
udev = "0.6"
waybar = { path = "../waybar" }
