[package]
name = "webcam"
version = "0.1.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
humantime = "2.1.0"
miniserde = "0.1.14"
nix = "0.22.0"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "signal", "sync", "time"] }
udev = "0.6.2"
waybar = { path = "../waybar" }
